--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
                 <p style="text-align:center;"><b>Web Dev Assignments</b></p>
                 <p style="text-align:center;">Sukhada Khatu</p>
-                <a href = "https://github.com/SukhadaKhatu/Web-Dev-Fall-2019.git" target = "_self">Go to Gihub</a><br>
+                <a href = "https://github.com/SukhadaKhatu/Web-Dev-Fall-2019.git" target = "_self">Go to Github</a><br>
                 <a href = "http://hw01.sukhadakhatu.space" target = "_self">Go to Homework 01</a>
         </body>
 
